--- a/table.html
+++ b/table.html
@@ -7,7 +7,7 @@
     </title>
 </head>
 <body>
-    <table border="1" cellpadding=10 cellspacing=0 >
+    <table border="1" cellpadding=10 cellspacing=0 bgcolour="red">
         
         <caption>try to craete a table</caption>
         <tr><th>first </th>
