progress bars set

--- a/final_project.html
+++ b/final_project.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Final Project</title>
 </head>
 <body>
-    
+    <h1 ><span style="background-color: yellow;">Sonu Pandey</span></h1>
+    <nav>
+        <a href="">One</a>
+        <a href="">Two</a>
+        <a href="">Three</a>
+        <a href="">Four</a>
+
+    </nav>
+    <h2>Favourite Foods</h2>
+    <ul >
+        <li ><span style="background-color: yellow;">Apple</span> </li>
+        <li><span style="background-color: yellow;">Pizza</span> </li>
+        <li> <span style="background-color: yellow;">Ghever</span> </li>
+        <li><span style="background-color: yellow;">Chocolate Cake</span> </li>
+    </ul>
+    <h2>Achievements</h2>
+    <p>Progress in this course (100%)<progress value="1" style="height: 10px;"></progress></p>
+    <p>Progress in the Specialization capstone (20%)<progress value="20" max ="100" style="height: 10px;"></progress></p>
+    <p>Progress in life goals <span style="background-color: yellow;">(60%)<progress value="60" max="100" style="height: 10px;"></progress></span></p>
 </body>
 </html>
