progress bars settled

--- a/final_project.html
+++ b/final_project.html
@@ -22,8 +22,8 @@
         <li><span style="background-color: yellow;">Chocolate Cake</span> </li>
     </ul>
     <h2>Achievements</h2>
-    <p>Progress in this course (100%)<progress value="1" style="height: 10px;"></progress></p>
-    <p>Progress in the Specialization capstone (20%)<progress value="20" max ="100" style="height: 10px;"></progress></p>
-    <p>Progress in life goals <span style="background-color: yellow;">(60%)<progress value="60" max="100" style="height: 10px;"></progress></span></p>
+    <p>Progress in this course (100%) <progress value="1" style="height: 5px;margin-bottom: 4px;"></progress><br>
+    Progress in the Specialization capstone (20%) <progress value="20" max ="100" style="height: 5px;margin-bottom: 4px;"></progress><br>
+    Progress in life goals <span style="background-color: yellow;">(60%) <progress value="60" max="100" style="height: 5px ;margin-bottom: 4px;"></progress></span></p>
 </body>
 </html>
