--- a/final_project.html
+++ b/final_project.html
@@ -25,5 +25,12 @@
     <p>Progress in this course (100%) <progress value="1" style="height: 5px;margin-bottom: 4px;"></progress><br>
     Progress in the Specialization capstone (20%) <progress value="20" max ="100" style="height: 5px;margin-bottom: 4px;"></progress><br>
     Progress in life goals <span style="background-color: yellow;">(60%) <progress value="60" max="100" style="height: 5px ;margin-bottom: 4px;"></progress></span></p>
+    <h2>More About Me</h2>
+    <details open>
+    <summary>My Childhood</summary>
+    <p style="background-color: yellow ;  display: table;">I grew up in Ashtabula Ohio. 
+    I lived near Lake Erie and I really miss the sunsets over the water.</p>
+    </details>
+    
 </body>
 </html>
