--- a/final_project.html
+++ b/final_project.html
@@ -8,10 +8,10 @@
 <body>
     <h1 ><span style="background-color: yellow;">Sonu Pandey</span></h1>
     <nav>
-        <a href="">One</a>
-        <a href="">Two</a>
-        <a href="">Three</a>
-        <a href="">Four</a>
+        <a href="#">One</a>
+        <a href="#">Two</a>
+        <a href="#">Three</a>
+        <a href="#">Four</a>
 
     </nav>
     <h2>Favourite Foods</h2>
@@ -31,6 +31,13 @@
     <p style="background-color: yellow ;  display: table;">I grew up in Ashtabula Ohio. 
     I lived near Lake Erie and I really miss the sunsets over the water.</p>
     </details>
-    
+    <footer>
+        <p>
+                <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="new logo">
+                This page was created by Sonu Pandey &amp; Colleen van Lent. To learn more about web design, visit
+                <a href="http://www.intro-webdesign.com">Intro to Web Design</a>
+            </p>
+        </footer>
+        
 </body>
 </html>
